crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-object-expression-get-syntax/error.txt
Found 1 error:

Todo: (BuildHIR::lowerExpression) Handle get functions in ObjectExpression

error.todo-object-expression-get-syntax.ts:3:4
  1 | function Component({value}) {
  2 |   const object = {
> 3 |     get value() {
    |     ^^^^^^^^^^^^^
> 4 |       return value;
    | ^^^^^^^^^^^^^^^^^^^
> 5 |     },
    | ^^^^^^ (BuildHIR::lowerExpression) Handle get functions in ObjectExpression
  6 |   };
  7 |   return <div>{object.value}</div>;
  8 | }
